# juliaset

./: .gitignore  CMakeLists.txt
units/: GenerateSourceGroups.cmake
units/mypoolapp/myapp/: CMakeLists.txt
units/mypoolapp/myapp/cmake/: deps.cmake  deps_myapp.cmake  qt5.utils.cmake  vars.cmake
