
cmake_minimum_required(VERSION 2.6)
include(units/GenerateSourceGroups.cmake)
# Задание атрибутов приложения/проекта
set(PRJ_NAME geo)
project(${PRJ_NAME})
#FIND_PACKAGE(Qt5Gui 5.5.0 EXACT)
#FIND_PACKAGE(Qt5 COMPONENTS QtCore QtGui)
#Настройка сборки
#set(CMAKE_BUILD_TYPE Release)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_COLOR_MAKEFILE ON)

# Указание пути для установки собранных модулей
set(GEODEV_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(GEODEV_INSTALL_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(GEODEV_INSTALL_LIB_PATH ${GEODEV_INSTALL_PATH}/lib)
set(GEODEV_INSTALL_API_PATH ${GEODEV_INSTALL_PATH}/include)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${GEODEV_INSTALL_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${GEODEV_INSTALL_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${GEODEV_INSTALL_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${GEODEV_INSTALL_PATH})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${GEODEV_INSTALL_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${GEODEV_INSTALL_PATH})
#set(EXECUTABLE_OUTPUT_PATH ${GEODEV_INSTALL_PATH})
#set(LIBRARY_OUTPUT_PATH ${GEODEV_INSTALL_PATH})

if(MSVC)
set(LINK_TYPE SHARED)
else()
set(LINK_TYPE SHARED) 
endif()

# Добавление подпроектов
add_subdirectory(modules)
add_subdirectory(packages)
#add_subdirectory(plugins)